--- a/HTML Parts/writing.html
+++ b/HTML Parts/writing.html
@@ -1,5 +1,6 @@
 <div>
-    <h3><span class="fi-info" style="font-size: 1.7rem"></span> Managing homeworks <small>Create homeworks, notes to them and set due dates here</small></h3>
+    <h3><span data-tooltip aria-haspopup="true" class="fi-info has-tip" data-disable-hover="false" tabindex="1" title="In this section you can create, delete and manage your homeworks. On the left you can see a long list of the homeworks that are currently in your database. The right panel shows you the different attributes of the currently selected homework. In the list you can easily see which homework is already done and which is not. To create new homnework just type the new name in the field and either click  Add  of just hit enter" style="font-size: 1.7rem"></span> Managing homeworks <small>Create homeworks, notes to them and set due dates here</small></h3>
+
     <hr>
     <div id="homeworkManagement" class="grid-x grid-padding-x grid-margin-x">
 
@@ -70,7 +71,7 @@
     <hr>
 
 
-    <h3><span class="fi-info" style="font-size: 1.7rem"></span> Notes</h3>
+    <h3><span data-tooltip aria-haspopup="true" class="fi-info has-tip" data-disable-hover="false" tabindex="1" title="This section contains your notes - tiny bits of text that you can associate with a particular homework and save them for later read. You can create new notes with the New button and filter the already available notes. " style="font-size: 1.7rem"></span> Notes</h3>
     <div class="callout" style="height: 90vh; overflow-y: scroll;">
 
         <div id="notesManagement">
