--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <div class="off-canvas-content" data-off-canvas-content>
             <div class="grid-x grid-padding-x ">
-                <div w3-include-html="sidePanel.html" class="cell medium-2 hide-for-small-only"> </div>
+                <div w3-include-html="HTML Parts/sidePanel.html" class="cell medium-2 hide-for-small-only"> </div>
 
 
                 <div class="cell medium-10 small-12">
@@ -81,10 +81,10 @@
 
                     <div class="tabs-content" data-tabs-content="example-tabs">
                         <div class="tabs-panel is-active" id="panel1">
-                            <div w3-include-html="writing.html"></div>
+                            <div w3-include-html="HTML Parts/writing.html"></div>
                         </div>
                         <div class="tabs-panel" id="panel2">
-                            <div w3-include-html="do.html"></div>
+                            <div w3-include-html="HTML Parts/do.html"></div>
                         </div>
                     </div>
                 </div>
