Final before exam

--- a/HTML Parts/addNoteModal.html
+++ b/HTML Parts/addNoteModal.html
@@ -19,10 +19,10 @@
 
 <label>
        Text:
-          <textarea id="noteTextField" v-model="newHomeworkDesc" rows="7" placeholder="Type text here..."></textarea>
+          <textarea id="noteTextField"  rows="7" placeholder="Type text here..."></textarea>
 </label>
 <button class="button expanded" id="newNoteButton">Ok</button>
 
 <button class="close-button" data-close aria-label="Close modal" id="noteCloseBtn" type="button">
     <span aria-hidden="true">&times;</span>
- </button>
+</button>
