--- a/HTML Parts/writing.html
+++ b/HTML Parts/writing.html
@@ -31,7 +31,7 @@
             </label>
             <label>
                 Due date:
-                <input v-model="homeworkDueDate" v-on:change="updateHomework(selectedHomework)" id="datePickHomework"  class="datepicker"  type="date" >
+                <input v-model="homeworkDueDate" v-on:change="updateHomework(selectedHomework)" id="datePickHomework"  class="datepicker"   >
             </label>
             <hr>
             <span data-tooltip aria-haspopup="true" class="fi-info has-tip" data-disable-hover="false" tabindex="1" title="Be sure to click this button when you want to save the changes that you make to a selected homework." style="font-size: 1.3rem"></span>
