--- a/HTML Parts/sidePanel.html
+++ b/HTML Parts/sidePanel.html
@@ -57,7 +57,7 @@
     </label>
         <label>
        Due date:
-     <input  class="datepicker" id="dateQuick"   type="date" >
+     <input  class="datepicker" id="dateQuick"  >
     </label>
         <button class="button expanded success" id="newHomeQuick">Ok</button>
         <button class="close-button" data-close id="closeQuick" aria-label="Close modal" type="button">
