--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div id="notificationController">
                 <div class="title-bar" style="height: 30px">
                     <div class="title-bar-left">
-                        <i style="cursor: default" class="menu-icon"></i> <span class="title-bar-title"><span style="display: inline" class="title-bar-title"><span data-tooltip aria-haspopup="true" class="fi-info has-tip" data-disable-hover="false" tabindex="1" title="This list shows you the homework that have due date in less than a week away form the current day" style="font-size: 1.0rem"></span> Due this Week</span>
+                        <i style="cursor: default" class="menu-icon"></i> <span class="title-bar-title"></span><span style="display: inline" class="title-bar-title"><span data-tooltip aria-haspopup="true" class="fi-info has-tip" data-disable-hover="false" tabindex="1" title="This list shows you the homework that have due date in less than a week away form the current day" style="font-size: 1.0rem"></span> Due this Week</span>
                     </div>
                     <div class="title-bar-center">
                         <small><a>All</a></small>
