--- a/404.html
+++ b/404.html
@@ -63,7 +63,7 @@
 					<a href="/projects/"> <span>Projects</span></a>
 				</li>
 				<li>
-					<a href="/tags/"> <span>Tags</span></a>
+					<a href="/categories/"> <span>Categories</span></a>
 				</li>
 		</li>
 	</ul>
