Adding google authentication

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -86,6 +86,8 @@ Sitemap & RSS Feed Tags
 <meta name="twitter:site" content="">
 <meta name="twitter:creator" content="" />
 
+<meta name="google-site-verification" content="Dajyx2hCwYPHFFMX4gJOxXtv6swEnwmHw9cQz9pzJvg" />
+
     
 
 
