Adding bing authentication

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -87,6 +87,7 @@ Sitemap & RSS Feed Tags
 <meta name="twitter:creator" content="" />
 
 <meta name="google-site-verification" content="Dajyx2hCwYPHFFMX4gJOxXtv6swEnwmHw9cQz9pzJvg" />
+<meta name="msvalidate.01" content="16753A569B85936F07C0CFBE19FE3BC3" />
 
     
 
